--- a/css/style.css
+++ b/css/style.css
@@ -778,6 +778,9 @@ footer span a:hover {
         width: 100%;
         margin-bottom: 35px;
     }
+    .home-content {
+        text-align: center;
+    }
 }
 
 @media (max-width: 690px) {
@@ -823,5 +826,11 @@ footer span a:hover {
         width: 35px;
         font-size: 23px;
         line-height: 38px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .navbar .logo a {
+        font-size: 25px;
     }
 }
